--- a/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
@@ -20,8 +20,11 @@
         <form asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyCreate" method="post" class="row g-3" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-md-12">
+                <div class="text-end mx-3">
+                    <small id="TitleCount50" class="form-text">0/50</small>
+                </div>
                 <div class="form-floating">
-                    <input asp-for="Title" type="text" class="form-control" id="floatingName" placeholder="Název záruční lhůty">
+                    <input asp-for="Title" type="text" class="form-control" id="Title" name="Title" placeholder="Název záruční lhůty">
                     <label asp-for="Title">Název záruční lhůty</label>
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
@@ -40,3 +43,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        setupLiveCharacterCount('Title', 'TitleCount50', 50);
+    </script>
+}
