Manufacturer-Entita,VM,Service,IService,Controller Doplnit HasData+validace+cshtmlCRUD

--- a/AutopartsWeb/Areas/SuperAdmin/Views/Country/CountryCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Country/CountryCreate.cshtml
@@ -10,7 +10,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryList">Země</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryCreate">Nová země</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryCreate">Vytvořit</a></li>
         </ol>
     </nav>
 </div>
