--- a/AutopartsWeb/Areas/SuperAdmin/Views/Country/CountryEdit.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Country/CountryEdit.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div>
-    <h5 class="card-title">Editace země</h5>
+    <h5 class="card-title">Editovat země</h5>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryList">Země</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryEdit">Editace země</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Country" asp-action="CountryEdit">Editovat</a></li>
         </ol>
     </nav>
 </div>
