--- a/AutopartsWeb/Areas/SuperAdmin/Views/Currency/CurrencyCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Currency/CurrencyCreate.cshtml
@@ -10,7 +10,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyList">Měna</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyCreate">Vytvořit měnu</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyCreate">Vytvořit</a></li>
         </ol>
     </nav>
 </div>
