--- a/AutopartsWeb/Areas/SuperAdmin/Views/Currency/CurrencyEdit.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Currency/CurrencyEdit.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div>
-    <h5 class="card-title">Editace měny</h5>
+    <h5 class="card-title">Editovat měnu</h5>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyList">Měna</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyEdit">Editace měny</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Currency" asp-action="CurrencyEdit">Editovat</a></li>
         </ol>
     </nav>
 </div>
