--- a/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyCreate.cshtml
@@ -10,7 +10,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyList">Záruční lhůty</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyCreate">Nová záruční lhůta</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyCreate">Vytvořit</a></li>
         </ol>
     </nav>
 </div>
