--- a/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyEdit.cshtml
+++ b/AutopartsWeb/Areas/SuperAdmin/Views/Warranty/WarrantyEdit.cshtml
@@ -5,12 +5,12 @@
 }
 
 <div>
-    <h5 class="card-title">Editace záruční lhůty</h5>
+    <h5 class="card-title">Editovat záruční lhůtu</h5>
     <nav>
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Dashboard" asp-action="Index">Dashboard</a></li>
             <li class="breadcrumb-item"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyList">Záruční lhůty</a></li>
-            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyEdit">Editace záruční lhůty</a></li>
+            <li class="breadcrumb-item active"><a asp-area="SuperAdmin" asp-controller="Warranty" asp-action="WarrantyEdit">Editovat</a></li>
         </ol>
     </nav>
 </div>
